--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -152,7 +152,7 @@
             <p>¡Te Esperamos!</p>
           </div>
 
-          <div class="col-lg-3 col-md-3 col-xs-6">
+          <div class="col-lg-3 col-md-6 col-xs-6">
             <h3 class="ds-none">Datos del Hotel</h3>
             <hr class="ds-none">
             <ul class="info-footer">
@@ -171,12 +171,11 @@
               <i class="fa-brands fa-whatsapp text-white mr-4 icon-footer"></i>
               223-3425621
             </li>
-            <li>
+            <li class="ds-lg-none">
             siguenos en: 
             <a class="link-dnone" href="https://www.facebook.com/HotelSolearesMDP">
               <i class="fa fa-facebook-square link-dnone"></i>
             </a>
-
             <a href="https://www.instagram.com/hotelsoleares/">
               <i class="fa fa-instagram icon-footer" aria-hidden="true"></i>
             </a>
@@ -198,7 +197,7 @@
             </ul>
           </div>
 
-          <div class="col-lg-3 col-md-3 col-xs-6 col-md-ds-none">
+          <div class="col-lg-3 col-md-6 col-xs-6 col-md-ds-none">
             <h3>Siguenos:</h3>
             <hr>
             <ul class="footer-social">
