--- a/index.html
+++ b/index.html
@@ -97,8 +97,11 @@
 
           <!-- aviso destacado -->
           <article class="alert-warning alert container info-advice">
-            <h2>Durante Enero y Febrero alojandote en nuestro Hotel, tendras 50% de descuento en los Balnearios 22 y 23.</h2>
+            <p class="todos-1">uno</p>
+            <p class="todos-2">dos</p>
+            <p class="todos-3">tres</p>
           </article>
+
 
           <!-- seccion comentarios booking -->
           <section class="container-fluid pt-4 bg-com">
@@ -184,6 +187,7 @@
               </div> <!-- end card comments -->
             </div>
           </section>
+    
         </main>
         <!-- end main contenido -->
 
