--- a/pages/paseos.html
+++ b/pages/paseos.html
@@ -113,7 +113,7 @@
           <!-- cards  -->
           <div class="card-default col-12 col-sm-12 col-md-12 col-lg-4 mb-3 ">
             <div class="card-h">
-              <img src="../img/puerto.png" alt="imagen-puerto">
+              <img src="'{{ asset ('img/puerto.png')}}" alt="imagen-puerto">
             </div>
             <div class="card-f mheight">
               <h2>Puerto</h2>
@@ -127,7 +127,7 @@
           <!-- cards  -->
           <div class="card-default col-sm-12 col-12 col-md-12 col-lg-4 mb-3">
             <div class="card-h">
-              <img src="../img/bosque.png" alt="imagen-bosque">
+              <img src="{{ asset ('img/bosque.png') }}" alt="imagen-bosque">
             </div>
             <div class="card-f mheight">
               <h2>Bosque Peralta Ramos</h2>
