--- a/index.html
+++ b/index.html
@@ -97,9 +97,7 @@
 
           <!-- aviso destacado -->
           <article class="alert-warning alert container info-advice">
-            <p class="todos-1">uno</p>
-            <p class="todos-2">dos</p>
-            <p class="todos-3">tres</p>
+            <h2>Durante Enero y Febrero alojandote en nuestro Hotel, tendras 50% de descuento en los Balnearios 22 y 23.</h2>
           </article>
 
 
