atributos alt imagenes

--- a/pages/paseos.html
+++ b/pages/paseos.html
@@ -19,7 +19,7 @@
                   <div class="container-lg">
 
             <a class="navbar-brand logo" href="#">
-              <img src="../img/logo-nav2.png" alt="logo-hotel-soleares">
+              <img src="../img/logo-nav2.png" alt="Logo Hotel Soleares Mar del Plata">
             </a>
 
             <button class="navbar-toggler"type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -99,7 +99,7 @@
           <!-- cards  -->
           <div class="card-default col-sm-12 col-12 col-md-12 col-lg-4 mb-3">
             <div class="card-h">
-              <img src="../img/playasmdp.jpg" alt="imagen-playa">
+              <img src="../img/playasmdp.jpg" alt="imagen playas de Mar del Plata">
             </div>
             <div class="card-f mheight">
               <h2>Playas de Punta mogotes</h2>
@@ -113,7 +113,7 @@
           <!-- cards  -->
           <div class="card-default col-12 col-sm-12 col-md-12 col-lg-4 mb-3 ">
             <div class="card-h">
-              <img src="../img/puerto.png" alt="imagen-puerto">
+              <img src="../img/puerto.png" alt="imagen puerto de Mar del Plata">
             </div>
             <div class="card-f mheight">
               <h2>Puerto</h2>
@@ -127,7 +127,7 @@
           <!-- cards  -->
           <div class="card-default col-sm-12 col-12 col-md-12 col-lg-4 mb-3">
             <div class="card-h">
-              <img src="../img/bosque.png" alt="imagen-bosque">
+              <img src="../img/bosque.png" alt="imagen Bosque Peralta Ramos Mar del Plata">
             </div>
             <div class="card-f mheight">
               <h2>Bosque Peralta Ramos</h2>
