--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -17,7 +17,7 @@
       <nav class="navbar navbar-expand-lg bg-white d-flex ">
         <div class="container-lg">
           <a class="navbar-brand logo" href="#">
-            <img src="../img/logo-nav2.png" alt="logo-hotel-soleares">
+            <img src="../img/logo-nav2.png" alt="logo Hotel Soleares Mar del Plata">
           </a>
           <button class="navbar-toggler"type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -93,13 +93,13 @@
               <div id="carouselExampleFade" class="carousel slide carousel-fade">
                 <div class="carousel-inner">
                   <div class="carousel-item active">
-                    <img src="../img/hab1.png" class="d-block w-100" alt="habitacion-doble">
+                    <img src="../img/hab1.png" class="d-block w-100" alt="Habitacion doble Hotel Soleares">
                   </div>
                   <div class="carousel-item">
-                    <img src="../img/hab2.png" class="d-block w-100" alt="habitacion-triple">
+                    <img src="../img/hab2.png" class="d-block w-100" alt="habitacion triple Hotel Soleares">
                   </div>
                   <div class="carousel-item">
-                    <img src="../img/hab3.png" class="d-block w-100" alt="habitacion-cuadruple">
+                    <img src="../img/hab3.png" class="d-block w-100" alt="habitacion cuadruple Hotel Soleares">
                   </div>
                 </div>
                 <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="prev">
