--- a/pages/habitaciones.html
+++ b/pages/habitaciones.html
@@ -19,7 +19,7 @@
                   <div class="container-lg">
 
             <a class="navbar-brand logo" href="#">
-              <img src="../img/logo-nav2.png" alt="logo-hotel-soleares">
+              <img src="../img/logo-nav2.png" alt="logo Hotel Soleares Mar del Plata">
             </a>
 
             <button class="navbar-toggler"type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -98,7 +98,7 @@
           <!-- cards  -->
           <div class="card-default col-sm-12 col-12 col-md-12 col-lg-4 mb-3">
             <div class="card-h">
-              <img src="../img/hab1.png" alt="habitacion-doble">
+              <img src="../img/hab1.png" alt="habitacion doble Hotel Soleares">
             </div>
             <div class="card-f">
               <h2>Habitacion doble </h2>
@@ -110,7 +110,7 @@
           <!-- cards  -->
           <div class="card-default col-sm-12 col-12 col-md-12 col-lg-4 mb-3">
             <div class="card-h">
-              <img src="../img/hab2.png" alt="habitacion-triple">
+              <img src="../img/hab2.png" alt="habitacion triple Hotel Soleares mar del Plata">
             </div>
             <div class="card-f">
               <h2>Habitacion triple</h2>
@@ -122,7 +122,7 @@
           <!-- cards  -->
           <div class="card-default ccol-sm-12 col-12 col-md-12 col-lg-4 mb-3">
             <div class="card-h">
-              <img src="../img/hab3.png" alt="habitacion-cuadruple">
+              <img src="../img/hab3.png" alt="Habitacion triple Hotel Soleares">
             </div>
             <div class="card-f">
               <h2>Habitacion cuadruple</h2>
