subit archivos sass

--- a/pages/habitaciones.html
+++ b/pages/habitaciones.html
@@ -96,6 +96,7 @@
           <h3>Habitaciones</h3>
           <hr>
           <!-- cards  -->
+          <div class="cont-cards">
           <div class="card-default col-sm-12 col-12 col-md-12 col-lg-4 mb-3">
             <div class="card-h">
               <img src="../img/hab1.png" alt="habitacion doble Hotel Soleares">
@@ -131,6 +132,7 @@
           </div>
           <!-- item card -->
         </div>
+        </div><!-- end cont cards --->
       </div>
 
       <!-- mensaje destacado -->
