--- a/pages/paseos.html
+++ b/pages/paseos.html
@@ -96,6 +96,7 @@
         <div class="row mt-2 p-2">
             <h3>Lugares de interés cercanos</h3>
           <hr>
+          <div class="cont-cards">
           <!-- cards  -->
           <div class="card-default col-sm-12 col-12 col-md-12 col-lg-4 mb-3">
             <div class="card-h">
@@ -138,6 +139,7 @@
           </div>
           <!-- item card -->
           </div>
+          </div><!--  fin cont cards -->
       </div>
 
       <!-- mensaje destacado -->
