--- a/index.html
+++ b/index.html
@@ -61,10 +61,10 @@
               <li>
               <span class="text-gray">Reservas por Whatsapp al:</span>&nbsp;
               <i class="fa-brands fa-whatsapp text-white mr-4"></i>
-              0223-3425621 &nbsp; | 
+              0223-3425621 &nbsp; | &nbsp;
               </li>
               <li>
-                Siguenos en:
+                Siguenos en&nbsp;:
                 </li>
                 <li>
                 <a href="https://www.facebook.com/HotelSolearesMDP/?locale=es_LA" class="redessociales">
