--- a/index.html
+++ b/index.html
@@ -6,10 +6,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- etiquetas seo -->
     <meta name="keywords" content="Hotel Soleares, hospedaje Mar del Plata, hotel cerca de la playa, habitaciones cómodas, hotel con desayuno, conexión wifi gratis">
-    <meta name="description" content="El Soleares, ubicado a solo 200 metros de la playa de Punta Mogotes, ofrece habitaciones cómodas, desayuno diario y conexión de wifi gratis. El centro de Mar del Plata está a 6 km.">
+    <meta name="description" content="Nuestro hotel esta ubicado a solo 200 metros de la playa de Punta Mogotes, ofrece habitaciones cómodas, desayuno diario y conexión de wifi gratis.Cercano al Puerto de Mar del Plata, y a 6km del centro comercial de la ciudad.">
+    <!--meta telefono-->
+    <meta name="telephone" content="+5492233425621">
+     <!--meta autor-->
+    <meta name="author" content="Lucas Volpe">
+     <!--meta lenguaje-->
+    <meta name="language" content="Spanish">
+     <!--meta lugar-->
+    <meta name="geo.placename" content="Argentina">
     <!-- enlaces css -->
     <link href="css/estilos.css" rel="stylesheet">
-    <link href="css/normalize.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <script src="https://kit.fontawesome.com/6421b44a28.js" crossorigin="anonymous"></script>
     <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&family=Karla:ital,wght@0,200..800;1,200..800&display=swap" rel="stylesheet">
@@ -24,7 +31,7 @@
               <div class="container-lg">
                 <!-- logo sitio -->
                 <a class="navbar-brand logo" href="#">
-                  <img src="../img/logo-nav2.png" alt="logo Hotel Soleares Mar del Plata">
+                  <img src="img/logo-nav2.png" alt="logo Hotel Soleares Mar del Plata">
                 </a>
                 <!-- menu oculto pantalla chica -->
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
